docs(migration): update content for FAQs

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -1,5 +1,5 @@
 ---
-title: DocSearch v3
+title: Getting Started
 ---
 
 import Tabs from '@theme/Tabs';
@@ -94,7 +94,7 @@ And the JavaScript at the end of your `<body>`:
 
 You can hint the browser to improve the speed of the first query by adding a `preconnect`, see [#preconnect](#preconnect)
 
-## Get started
+## Implementation
 
 <Tabs
   groupId="language"
