--- a/packages/website/docs/crawler.mdx
+++ b/packages/website/docs/crawler.mdx
@@ -16,7 +16,7 @@ For questions related to the DocSearch program, please see our [DocSearch progra
 
 ## How often will you crawl my website?
 
-Crawls are scheduled at a random time once a week, you are also able to trigger new ones directly from [the Crawler interface][2]. You can also configure your schedule [from the config file](https://www.algolia.com/doc/tools/crawler/apis/configuration/schedule/)
+Crawls are scheduled at a random time once a week. You can [configure this schedule from the config file](https://www.algolia.com/doc/tools/crawler/apis/configuration/schedule/) or trigger one manually from [the Crawler interface][2].
 
 ## Why do I have duplicate content in my results?
 
