fix(footer): make SVG accessible

--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -122,7 +122,7 @@ Learn more on the [Navigator API][11] documentation.
 
 > `type: Partial<DocSearchTranslations>` | `default: docSearchTranslations` | **optional**
 
-Allow translations of any raw text present in the DocSearch button or modal components.
+Allow translations of any raw text and aria-labels present in the DocSearch button or modal components.
 
 <details><summary>docSearchTranslations</summary>
 <div>
@@ -154,8 +154,12 @@ const translations: DocSearchTranslations = {
     },
     footer: {
       selectText: 'to select',
+      selectKeyAriaLabel: 'Enter key',
       navigateText: 'to navigate',
+      navigateUpKeyAriaLabel: 'Arrow up',
+      navigateDownKeyAriaLabel: 'Arrow down',
       closeText: 'to close',
+      closeKeyAriaLabel: 'Escape key',
       searchByText: 'Search by',
     },
     noResultsScreen: {
@@ -278,7 +282,7 @@ Learn more on the [Navigator API][11] documentation.
 
 > `type: Partial<DocSearchTranslations>` | `default: docSearchTranslations` | **optional**
 
-Allow translations of any raw text present in the DocSearch button or modal components.
+Allow translations of any raw text and aria-labels present in the DocSearch button or modal components.
 
 <details><summary>docSearchTranslations</summary>
 <div>
@@ -310,8 +314,12 @@ const translations: DocSearchTranslations = {
     },
     footer: {
       selectText: 'to select',
+      selectKeyAriaLabel: 'Enter key',
       navigateText: 'to navigate',
+      navigateUpKeyAriaLabel: 'Arrow up',
+      navigateDownKeyAriaLabel: 'Arrow down',
       closeText: 'to close',
+      closeKeyAriaLabel: 'Escape key',
       searchByText: 'Search by',
     },
     noResultsScreen: {
