--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -159,7 +159,7 @@ export default App;
 
 ### Testing
 
-If you're eager to test DocSearch v3 and can't wait to receive your credentails, you can use ours!
+If you're eager to test DocSearch v3 and can't wait to receive your credentials, you can use ours!
 
 <Tabs
   groupId="language"
