update doc and READMEs

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -38,9 +38,9 @@ DocSearch packages are available on the [npm][10] registry.
 <TabItem value="js">
 
 ```bash
-yarn add @docsearch/js@alpha
+yarn add @docsearch/js@3
 # or
-npm install @docsearch/js@alpha
+npm install @docsearch/js@3
 ```
 
 ### Without package manager
@@ -48,25 +48,22 @@ npm install @docsearch/js@alpha
 If you don't want to use a package manger, you can add the CSS to the `<head>` of your website:
 
 ```html
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@docsearch/css@alpha"
-/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
 ```
 
 And the JavaScript at the end of your `<body>`:
 
 ```html
-<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@alpha"></script>
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
 ```
 
 </TabItem>
 <TabItem value="react">
 
 ```bash
-yarn add @docsearch/react@alpha
+yarn add @docsearch/react@3
 # or
-npm install @docsearch/react@alpha
+npm install @docsearch/react@3
 ```
 
 ### Without package manager
@@ -74,16 +71,13 @@ npm install @docsearch/react@alpha
 If you don't want to use a package manger, you can add the CSS to the `<head>` of your website:
 
 ```html
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@docsearch/css@alpha"
-/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
 ```
 
 And the JavaScript at the end of your `<body>`:
 
 ```html
-<script src="https://cdn.jsdelivr.net/npm/@docsearch/react@alpha"></script>
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/react@3"></script>
 ```
 
 </TabItem>
