--- a/packages/website/docs/migrating-from-legacy.mdx
+++ b/packages/website/docs/migrating-from-legacy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Migrating from legacy
+title: Migrating from the legacy scraper
 ---
 
 import Tabs from '@theme/Tabs';
@@ -7,7 +7,7 @@ import TabItem from '@theme/TabItem';
 
 ## Introduction
 
-With this new version of the [DocSearch UI][1], we wanted to go further and provide better tooling for you to create and maintain your config file, and some extra Algolia features that you all have been requesting for a long time!
+With the new version of the [DocSearch UI][1], we wanted to go further and provide better tooling for you to create and maintain your config file, and some extra Algolia features that you all have been requesting for a long time!
 
 ## What's new?
 
