--- a/packages/website/docs/migrating-from-legacy.mdx
+++ b/packages/website/docs/migrating-from-legacy.mdx
@@ -82,5 +82,5 @@ Below are the keys that can be found in the [`legacy` DocSearch configs][14] and
 [27]: https://github.com/micromatch/micromatch
 [28]: https://www.algolia.com/doc/tools/crawler/apis/configuration/actions/#parameter-param-recordextractor
 [29]: /docs/record-extractor
-[30]: /docs/record-extractor#with-custom-variables
+[30]: /docs/record-extractor#introduction
 [31]: /docs/record-extractor#pagerank
