--- a/packages/website/docs/required-configuration.mdx
+++ b/packages/website/docs/required-configuration.mdx
@@ -44,6 +44,7 @@ new Crawler({
             lvl6: ['article h6', 'main h6', 'h6'],
             content: ['article p, article li', 'main p, main li', 'p, li'],
           },
+          aggregateContent: true,
         });
       },
     },
@@ -202,5 +203,5 @@ Any questions? [Send us an email][9].
 [9]: mailto:DocSearch@algolia.com
 [10]: /docs/DocSearch-v3#filtering-your-search
 [11]: /docs/templates
-[12]: /docs/record-extractor#complex-extractors
+[12]: /docs/record-extractor#introduction
 [13]: /docs/integrations
