docs: use support page instead of email

--- a/packages/website/docs/crawler.mdx
+++ b/packages/website/docs/crawler.mdx
@@ -32,9 +32,7 @@ We've deprecated our legacy infrastructure, but you can still use it to [run you
 
 ## Migration seems to have started, but I don't have received any emails
 
-All of the indices from the [Legacy infrastructure](/docs/legacy/required-configuration) have been migrated, please search for emails from `docsearch@algolia.com`.
-
-It is also possible that you were not part of the members of the previous index, don't hesitate to [contact our support team](mailto:support@algolia.com)
+All of the indices from the [Legacy infrastructure](/docs/legacy/required-configuration) have been migrated, please search for emails from `docsearch@algolia.com`. If you were not part of the previous `index` owners, or the maintainer has changed, you can request access via [our support page](https://www.algolia.com/support/).
 
 ## What do I need to do to migrate?
 
