--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -192,6 +192,38 @@ When provided, an informative message wrapped with your link will be displayed o
   />
 </div>
 
+## `resultsFooterComponent`
+
+> `type: ({ state }) => JSX.Element` | **optional**
+
+The component to display a result count and link in the footer.
+
+```js
+docsearch({
+  // ...
+  resultsFooterComponent({ state }) {
+    return {
+      // The HTML `tag`
+      type: 'a',
+      ref: undefined,
+      constructor: undefined,
+      key: state.query,
+      // Its props
+      props: {
+        href: 'https://docsearch.algolia.com/apply',
+        target: '_blank',
+        onClick: (event) => {
+          console.log(event);
+        },
+        // Raw text rendered in the HTML element
+        children: `${state.context.nbHits} hits found!`,
+      },
+      __v: null,
+    };
+  },
+});
+```
+
 </TabItem>
 
 <TabItem value="react">
@@ -351,6 +383,21 @@ When provided, an informative message wrapped with your link will be displayed o
     alt="No results screen with informative message"
   />
 </div>
+
+## `resultsFooterComponent`
+
+> `type: ({ state }) => JSX.Element` | **optional**
+
+The component to display a result count and link in the footer.
+
+```js
+<DocSearch
+  // ...
+  resultsFooterComponent={({ state }) => {
+    return <h1>{state.context.nbHits} hits found</h1>;
+  }}
+/>
+```
 
 </TabItem>
 
