--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -196,7 +196,7 @@ When provided, an informative message wrapped with your link will be displayed o
 
 > `type: ({ state }) => JSX.Element` | **optional**
 
-The component to display a result count and link in the footer.
+The component to display a result count below the search results.
 
 ```js
 docsearch({
@@ -388,7 +388,7 @@ When provided, an informative message wrapped with your link will be displayed o
 
 > `type: ({ state }) => JSX.Element` | **optional**
 
-The component to display a result count and link in the footer.
+The component to display a result count below the search results.
 
 ```js
 <DocSearch
