docs: remove v2 settings from v3 configs

--- a/packages/website/docs/required-configuration.mdx
+++ b/packages/website/docs/required-configuration.mdx
@@ -45,6 +45,7 @@ new Crawler({
             content: ['article p, article li', 'main p, main li', 'p, li'],
           },
           aggregateContent: true,
+          recordVersion: 'v3',
         });
       },
     },
@@ -60,37 +61,16 @@ new Crawler({
         'url_without_anchor',
         'type',
       ],
-      attributesToHighlight: ['hierarchy', 'hierarchy_camel', 'content'],
+      attributesToHighlight: ['hierarchy', 'content'],
       attributesToSnippet: ['content:10'],
-      camelCaseAttributes: ['hierarchy', 'hierarchy_radio', 'content'],
+      camelCaseAttributes: ['hierarchy', 'content'],
       searchableAttributes: [
-        'unordered(hierarchy_radio_camel.lvl0)',
-        'unordered(hierarchy_radio.lvl0)',
-        'unordered(hierarchy_radio_camel.lvl1)',
-        'unordered(hierarchy_radio.lvl1)',
-        'unordered(hierarchy_radio_camel.lvl2)',
-        'unordered(hierarchy_radio.lvl2)',
-        'unordered(hierarchy_radio_camel.lvl3)',
-        'unordered(hierarchy_radio.lvl3)',
-        'unordered(hierarchy_radio_camel.lvl4)',
-        'unordered(hierarchy_radio.lvl4)',
-        'unordered(hierarchy_radio_camel.lvl5)',
-        'unordered(hierarchy_radio.lvl5)',
-        'unordered(hierarchy_radio_camel.lvl6)',
-        'unordered(hierarchy_radio.lvl6)',
-        'unordered(hierarchy_camel.lvl0)',
         'unordered(hierarchy.lvl0)',
-        'unordered(hierarchy_camel.lvl1)',
         'unordered(hierarchy.lvl1)',
-        'unordered(hierarchy_camel.lvl2)',
         'unordered(hierarchy.lvl2)',
-        'unordered(hierarchy_camel.lvl3)',
         'unordered(hierarchy.lvl3)',
-        'unordered(hierarchy_camel.lvl4)',
         'unordered(hierarchy.lvl4)',
-        'unordered(hierarchy_camel.lvl5)',
         'unordered(hierarchy.lvl5)',
-        'unordered(hierarchy_camel.lvl6)',
         'unordered(hierarchy.lvl6)',
         'content',
       ],
