--- a/packages/website/docs/templates.mdx
+++ b/packages/website/docs/templates.mdx
@@ -205,7 +205,7 @@ new Crawler({
               selectors: '',
               defaultValue: lvl0,
             },
-            lvl1: 'header h1',
+            lvl1: ['header h1', 'article h1'],
             lvl2: 'article h2',
             lvl3: 'article h3',
             lvl4: 'article h4',
@@ -215,6 +215,7 @@ new Crawler({
           },
           indexHeadings: true,
           aggregateContent: true,
+          recordVersion: 'v3',
         });
       },
     },
@@ -236,37 +237,16 @@ new Crawler({
         'url_without_anchor',
         'type',
       ],
-      attributesToHighlight: ['hierarchy', 'hierarchy_camel', 'content'],
+      attributesToHighlight: ['hierarchy', 'content'],
       attributesToSnippet: ['content:10'],
-      camelCaseAttributes: ['hierarchy', 'hierarchy_radio', 'content'],
+      camelCaseAttributes: ['hierarchy', 'content'],
       searchableAttributes: [
-        'unordered(hierarchy_radio_camel.lvl0)',
-        'unordered(hierarchy_radio.lvl0)',
-        'unordered(hierarchy_radio_camel.lvl1)',
-        'unordered(hierarchy_radio.lvl1)',
-        'unordered(hierarchy_radio_camel.lvl2)',
-        'unordered(hierarchy_radio.lvl2)',
-        'unordered(hierarchy_radio_camel.lvl3)',
-        'unordered(hierarchy_radio.lvl3)',
-        'unordered(hierarchy_radio_camel.lvl4)',
-        'unordered(hierarchy_radio.lvl4)',
-        'unordered(hierarchy_radio_camel.lvl5)',
-        'unordered(hierarchy_radio.lvl5)',
-        'unordered(hierarchy_radio_camel.lvl6)',
-        'unordered(hierarchy_radio.lvl6)',
-        'unordered(hierarchy_camel.lvl0)',
         'unordered(hierarchy.lvl0)',
-        'unordered(hierarchy_camel.lvl1)',
         'unordered(hierarchy.lvl1)',
-        'unordered(hierarchy_camel.lvl2)',
         'unordered(hierarchy.lvl2)',
-        'unordered(hierarchy_camel.lvl3)',
         'unordered(hierarchy.lvl3)',
-        'unordered(hierarchy_camel.lvl4)',
         'unordered(hierarchy.lvl4)',
-        'unordered(hierarchy_camel.lvl5)',
         'unordered(hierarchy.lvl5)',
-        'unordered(hierarchy_camel.lvl6)',
         'unordered(hierarchy.lvl6)',
         'content',
       ],
@@ -449,6 +429,7 @@ new Crawler({
           },
           indexHeadings: true,
           aggregateContent: true,
+          recordVersion: 'v3',
         });
       },
     },
@@ -457,37 +438,16 @@ new Crawler({
     YOUR_INDEX_NAME: {
       attributesForFaceting: ['type', 'lang'],
       attributesToRetrieve: ['hierarchy', 'content', 'anchor', 'url'],
-      attributesToHighlight: ['hierarchy', 'hierarchy_camel', 'content'],
+      attributesToHighlight: ['hierarchy', 'content'],
       attributesToSnippet: ['content:10'],
-      camelCaseAttributes: ['hierarchy', 'hierarchy_radio', 'content'],
+      camelCaseAttributes: ['hierarchy', 'content'],
       searchableAttributes: [
-        'unordered(hierarchy_radio_camel.lvl0)',
-        'unordered(hierarchy_radio.lvl0)',
-        'unordered(hierarchy_radio_camel.lvl1)',
-        'unordered(hierarchy_radio.lvl1)',
-        'unordered(hierarchy_radio_camel.lvl2)',
-        'unordered(hierarchy_radio.lvl2)',
-        'unordered(hierarchy_radio_camel.lvl3)',
-        'unordered(hierarchy_radio.lvl3)',
-        'unordered(hierarchy_radio_camel.lvl4)',
-        'unordered(hierarchy_radio.lvl4)',
-        'unordered(hierarchy_radio_camel.lvl5)',
-        'unordered(hierarchy_radio.lvl5)',
-        'unordered(hierarchy_radio_camel.lvl6)',
-        'unordered(hierarchy_radio.lvl6)',
-        'unordered(hierarchy_camel.lvl0)',
         'unordered(hierarchy.lvl0)',
-        'unordered(hierarchy_camel.lvl1)',
         'unordered(hierarchy.lvl1)',
-        'unordered(hierarchy_camel.lvl2)',
         'unordered(hierarchy.lvl2)',
-        'unordered(hierarchy_camel.lvl3)',
         'unordered(hierarchy.lvl3)',
-        'unordered(hierarchy_camel.lvl4)',
         'unordered(hierarchy.lvl4)',
-        'unordered(hierarchy_camel.lvl5)',
         'unordered(hierarchy.lvl5)',
-        'unordered(hierarchy_camel.lvl6)',
         'unordered(hierarchy.lvl6)',
         'content',
       ],
@@ -558,6 +518,7 @@ new Crawler({
           },
           indexHeadings: true,
           aggregateContent: true,
+          recordVersion: 'v3',
         });
       },
     },
@@ -566,37 +527,16 @@ new Crawler({
     YOUR_INDEX_NAME: {
       attributesForFaceting: ['type', 'lang'],
       attributesToRetrieve: ['hierarchy', 'content', 'anchor', 'url'],
-      attributesToHighlight: ['hierarchy', 'hierarchy_camel', 'content'],
+      attributesToHighlight: ['hierarchy', 'content'],
       attributesToSnippet: ['content:10'],
-      camelCaseAttributes: ['hierarchy', 'hierarchy_radio', 'content'],
+      camelCaseAttributes: ['hierarchy', 'content'],
       searchableAttributes: [
-        'unordered(hierarchy_radio_camel.lvl0)',
-        'unordered(hierarchy_radio.lvl0)',
-        'unordered(hierarchy_radio_camel.lvl1)',
-        'unordered(hierarchy_radio.lvl1)',
-        'unordered(hierarchy_radio_camel.lvl2)',
-        'unordered(hierarchy_radio.lvl2)',
-        'unordered(hierarchy_radio_camel.lvl3)',
-        'unordered(hierarchy_radio.lvl3)',
-        'unordered(hierarchy_radio_camel.lvl4)',
-        'unordered(hierarchy_radio.lvl4)',
-        'unordered(hierarchy_radio_camel.lvl5)',
-        'unordered(hierarchy_radio.lvl5)',
-        'unordered(hierarchy_radio_camel.lvl6)',
-        'unordered(hierarchy_radio.lvl6)',
-        'unordered(hierarchy_camel.lvl0)',
         'unordered(hierarchy.lvl0)',
-        'unordered(hierarchy_camel.lvl1)',
         'unordered(hierarchy.lvl1)',
-        'unordered(hierarchy_camel.lvl2)',
         'unordered(hierarchy.lvl2)',
-        'unordered(hierarchy_camel.lvl3)',
         'unordered(hierarchy.lvl3)',
-        'unordered(hierarchy_camel.lvl4)',
         'unordered(hierarchy.lvl4)',
-        'unordered(hierarchy_camel.lvl5)',
         'unordered(hierarchy.lvl5)',
-        'unordered(hierarchy_camel.lvl6)',
         'unordered(hierarchy.lvl6)',
         'content',
       ],
@@ -748,37 +688,16 @@ new Crawler({
         'url',
         'url_without_anchor',
       ],
-      attributesToHighlight: ['hierarchy', 'hierarchy_camel', 'content'],
+      attributesToHighlight: ['hierarchy', 'content'],
       attributesToSnippet: ['content:10'],
-      camelCaseAttributes: ['hierarchy', 'hierarchy_radio', 'content'],
+      camelCaseAttributes: ['hierarchy', 'content'],
       searchableAttributes: [
-        'unordered(hierarchy_radio_camel.lvl0)',
-        'unordered(hierarchy_radio.lvl0)',
-        'unordered(hierarchy_radio_camel.lvl1)',
-        'unordered(hierarchy_radio.lvl1)',
-        'unordered(hierarchy_radio_camel.lvl2)',
-        'unordered(hierarchy_radio.lvl2)',
-        'unordered(hierarchy_radio_camel.lvl3)',
-        'unordered(hierarchy_radio.lvl3)',
-        'unordered(hierarchy_radio_camel.lvl4)',
-        'unordered(hierarchy_radio.lvl4)',
-        'unordered(hierarchy_radio_camel.lvl5)',
-        'unordered(hierarchy_radio.lvl5)',
-        'unordered(hierarchy_radio_camel.lvl6)',
-        'unordered(hierarchy_radio.lvl6)',
-        'unordered(hierarchy_camel.lvl0)',
         'unordered(hierarchy.lvl0)',
-        'unordered(hierarchy_camel.lvl1)',
         'unordered(hierarchy.lvl1)',
-        'unordered(hierarchy_camel.lvl2)',
         'unordered(hierarchy.lvl2)',
-        'unordered(hierarchy_camel.lvl3)',
         'unordered(hierarchy.lvl3)',
-        'unordered(hierarchy_camel.lvl4)',
         'unordered(hierarchy.lvl4)',
-        'unordered(hierarchy_camel.lvl5)',
         'unordered(hierarchy.lvl5)',
-        'unordered(hierarchy_camel.lvl6)',
         'unordered(hierarchy.lvl6)',
         'content',
       ],
