--- a/packages/website/docs/manage-your-crawls.mdx
+++ b/packages/website/docs/manage-your-crawls.mdx
@@ -49,3 +49,14 @@ From the [`editor`](#update-your-config), you have access to a `Search preview` 
     alt="Algolia Crawler creation page"
   />
 </div>
+
+## URL tester
+
+From the [`editor`](#update-your-config), your can use the URL tester to [debug selectors](https://www.algolia.com/doc/tools/crawler/getting-started/crawler-configuration/#debugging-selectors) or how we crawl your website.
+
+<div className="uil-ta-center">
+  <img
+    src={useBaseUrl('img/assets/crawler-url-tester.png')}
+    alt="Algolia Crawler URL tester"
+  />
+</div>
