--- a/packages/website/docs/templates.mdx
+++ b/packages/website/docs/templates.mdx
@@ -17,9 +17,9 @@ Templates are available when you [create a new Crawler](https://crawler.algolia.
   />
 </div>
 
-## Default DocSearch template
+## Default template
 
-<details><summary>docsearch-default.js</summary>
+<details><summary>default.js</summary>
 <div>
   
 ```js
