--- a/packages/website/docs/templates.mdx
+++ b/packages/website/docs/templates.mdx
@@ -21,85 +21,85 @@ Templates are available when you [create a new Crawler](https://crawler.algolia.
 
 <details><summary>default.js</summary>
 <div>
-  
+
 ```js
 new Crawler({
   appId: 'YOUR_APP_ID',
   apiKey: 'YOUR_API_KEY',
-  indexPrefix: "crawler_",
+  indexPrefix: 'crawler_',
   rateLimit: 8,
-  startUrls: ["https://YOUR_WEBSITE_URL"],
+  startUrls: ['https://YOUR_WEBSITE_URL'],
   renderJavaScript: false,
   sitemaps: [],
   ignoreCanonicalTo: false,
-  discoveryPatterns: ["https://YOUR_WEBSITE_URL/**"],
+  discoveryPatterns: ['https://YOUR_WEBSITE_URL/**'],
   actions: [
     {
       indexName: 'YOUR_INDEX_NAME',
-      pathsToMatch: ["https://YOUR_WEBSITE_URL/**"],
+      pathsToMatch: ['https://YOUR_WEBSITE_URL/**'],
       recordExtractor: ({ helpers }) => {
         return helpers.docsearch({
           recordProps: {
-            lvl1: ["header h1", "article h1", "main h1", "h1", "head > title"],
-            content: ["article p, article li", "main p, main li", "p, li"],
+            lvl1: ['header h1', 'article h1', 'main h1', 'h1', 'head > title'],
+            content: ['article p, article li', 'main p, main li', 'p, li'],
             lvl0: {
-              selectors: "",
-              defaultValue: "Documentation",
+              selectors: '',
+              defaultValue: 'Documentation',
             },
-            lvl2: ["article h2", "main h2", "h2"],
-            lvl3: ["article h3", "main h3", "h3"],
-            lvl4: ["article h4", "main h4", "h4"],
-            lvl5: ["article h5", "main h5", "h5"],
-            lvl6: ["article h6", "main h6", "h6"],
+            lvl2: ['article h2', 'main h2', 'h2'],
+            lvl3: ['article h3', 'main h3', 'h3'],
+            lvl4: ['article h4', 'main h4', 'h4'],
+            lvl5: ['article h5', 'main h5', 'h5'],
+            lvl6: ['article h6', 'main h6', 'h6'],
           },
           aggregateContent: true,
-          recordVersion: "v3",
+          recordVersion: 'v3',
         });
       },
     },
   ],
   initialIndexSettings: {
-    'YOUR_INDEX_NAME': {
-      attributesForFaceting: ["type", "lang"],
+    YOUR_INDEX_NAME: {
+      attributesForFaceting: ['type', 'lang'],
       attributesToRetrieve: [
-        "hierarchy",
-        "content",
-        "anchor",
-        "url",
-        "url_without_anchor",
-        "type",
+        'hierarchy',
+        'content',
+        'anchor',
+        'url',
+        'url_without_anchor',
+        'type',
       ],
-      attributesToHighlight: ["hierarchy", "content"],
-      attributesToSnippet: ["content:10"],
-      camelCaseAttributes: ["hierarchy", "content"],
+      attributesToHighlight: ['hierarchy', 'content'],
+      attributesToSnippet: ['content:10'],
+      camelCaseAttributes: ['hierarchy', 'content'],
       searchableAttributes: [
-        "unordered(hierarchy.lvl0)",
-        "unordered(hierarchy.lvl1)",
-        "unordered(hierarchy.lvl2)",
-        "unordered(hierarchy.lvl3)",
-        "unordered(hierarchy.lvl4)",
-        "unordered(hierarchy.lvl5)",
-        "unordered(hierarchy.lvl6)",
-        "content",
+        'unordered(hierarchy.lvl0)',
+        'unordered(hierarchy.lvl1)',
+        'unordered(hierarchy.lvl2)',
+        'unordered(hierarchy.lvl3)',
+        'unordered(hierarchy.lvl4)',
+        'unordered(hierarchy.lvl5)',
+        'unordered(hierarchy.lvl6)',
+        'content',
       ],
       distinct: true,
-      attributeForDistinct: "url",
+      attributeForDistinct: 'url',
       customRanking: [
-        "desc(weight.pageRank)",
-        "desc(weight.level)",
-        "asc(weight.position)",
+        'desc(weight.pageRank)',
+        'desc(weight.level)',
+        'asc(weight.position)',
       ],
       ranking: [
-        "words",
-        "filters",
-        "typo",
-        "attribute",
-        "proximity",
-        "exact",
-        "custom",
+        'words',
+        'filters',
+        'typo',
+        'attribute',
+        'proximity',
+        'exact',
+        'custom',
       ],
       highlightPreTag: '<span class="algolia-docsearch-suggestion--highlight">',
-      highlightPostTag: "</span>",
+      highlightPostTag: '</span>',
       minWordSizefor1Typo: 3,
       minWordSizefor2Typos: 7,
       allowTyposOnNumericTokens: false,
@@ -107,7 +107,7 @@ new Crawler({
       ignorePlurals: true,
       advancedSyntax: true,
       attributeCriteriaComputedByMinProximity: true,
-      removeWordsIfNoResults: "allOptional",
+      removeWordsIfNoResults: 'allOptional',
     },
   },
 });
