Updates the documentation for insights in JS

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -248,7 +248,7 @@ docsearch({
   searchParameters: {
     facetFilters: ['language:en', 'version:1.0.0'],
   },
-  insights,
+  insights: true,
 });
 ```
 
