docs(v3): fix the typo

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -45,7 +45,7 @@ npm install @docsearch/js@3
 
 ### Without package manager
 
-If you don't want to use a package manger, you can add the CSS to the `<head>` of your website:
+If you don't want to use a package manager, you can add the CSS to the `<head>` of your website:
 
 ```html
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
