add accessible label to search input, update tests

--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -171,6 +171,7 @@ const translations: DocSearchTranslations = {
       resetButtonAriaLabel: 'Clear the query',
       cancelButtonText: 'Cancel',
       cancelButtonAriaLabel: 'Cancel',
+      searchInputLabel: 'Search',
     },
     startScreen: {
       recentSearchesTitle: 'Recent',
