--- a/packages/website/docs/crawler.mdx
+++ b/packages/website/docs/crawler.mdx
@@ -104,7 +104,7 @@ No. Well, you can but once you do things will not work correctly. We automatical
 
 ## What if I delete my DocSearch Crawler?
 
-The fastest way will be to connect with us on our Discord server. Alternatively, email us at the address below and we will get to it as soon as we can.
+The fastest way will be to connect with us on our [Discord](https://alg.li/discord). Alternatively, email us at the address below and we will get to it as soon as we can.
 
 ## Links related to the migration
 
