docs: update crawler.mdx (#2250)
* Update crawler.mdx

Users are unfortunately deleting their crawlers which result in broken processes. We will fix this in the longer term but in the shorter term putting in these FAQs.

* Update crawler.mdx

docs: added discord link

--- a/packages/website/docs/crawler.mdx
+++ b/packages/website/docs/crawler.mdx
@@ -98,6 +98,14 @@ We provide [config templates](/docs/templates) for many website generators, but 
 
 The Crawler only applies `index settings` at index creation index, to keep the Algolia dashboard as the source of truth. If you have drastically changed your config, or moved to a website generator, we recommend you to delete your index from the Algolia dashboard before starting a new crawl.
 
+## Can I delete my crawler?
+
+No. Well, you can but once you do things will not work correctly. We automatically create a default crawler that is associated with your DocSearch application and deleting it with the intention of creating a new one will not work as expected.
+
+## What if I delete my DocSearch Crawler?
+
+The fastest way will be to connect with us on our [Discord](https://alg.li/discord). Alternatively, email us at the address below and we will get to it as soon as we can.
+
 ## Links related to the migration
 
 - [Docusaurus blog post](https://docusaurus.io/blog/2021/11/21/algolia-docsearch-migration)
